# Git-Crasher

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  demo.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh  verify_format.py
assets/: style.css
server/: app.py
sql_env/: env.py  graders.py  models.py  server.py  tasks.py
