[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-review-env"
version = "1.0.0"
description = "Train AI agents to review, fix, and optimize SQL queries"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0.0",
    "openenv-core",
    "faker",
    "requests",
    "openai"
]

[project.scripts]
server = "sql_env.server:app"
